gitops/feature-flags/flagd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flagd
  namespace: feature-flags
spec:
  selector: { app: flagd }
  ports:
    - name: grpc
      port: 8013
      targetPort: 8013
